--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.2",
+    "echarts": "^5.0.0",
     "element-plus": "^1.0.1-beta.23",
     "moment": "^2.29.1",
     "vue": "^3.0.0",
